fixed workspace being too big even thought theres nothing showing

--- a/public_html/css/todo_layout.css
+++ b/public_html/css/todo_layout.css
@@ -55,7 +55,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
 }
 
 .list-item-card {
